# MNIST_ANN

./: .gitignore  CMakeLists.txt  README.md
.preprocessed/family/: process.py
.preprocessed/usps/: main.cpp
data/family/: dad_images.idx3-ubyte  dad_labels.idx1-ubyte  mom_images.idx3-ubyte  mom_labels.idx1-ubyte
include/: activation_functions.h  extra.h  layer.h  mnist_loader.h  network.h
src/: activation_functions.cpp  extra.cpp  layer.cpp  main.cpp  mnist_loader.cpp  network.cpp
usps_preprocess/: main.cpp
